--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "ng2-pdf-viewer": "^5.1.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
